Update src/main/java/practice/StreamPractice.java
Co-authored-by: Olena Bruiako <bruyako.elena@gmail.com>